# OpenHealth-Core

./: .editorconfig  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE.md  Package.swift  README.md  REUSE.toml  ReleaseNotes.md  SECURITY.md  build-all.sh  build.gradle.kts  dokkaStyle.css  gradle.properties  gradlew  pace-contactless.jsonl  rustfmt.toml  settings.gradle.kts  test-crypto-cs.sh  test-cs.sh  trusted-channel.jsonl
.cargo/: config.toml
.githooks/: pre-commit  pre-push
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: bindings-release.yml  changelog_template.md  ci-rust.yml  codeql.yml  dokka.yml  pullrequest.yml  release-bindings.yml  release-notes-check.yml  rust-ci.yml  rust.yml
.reuse/templates/: gematik.jinja2
asn1/: README.md  build.gradle.kts
asn1-core/: Cargo.toml
asn1-ffi/: Cargo.toml
asn1-ffi-cs-tests/: Asn1GeneralizedTime.cs  Asn1Native.cs  Asn1Tests.cs  Asn1UtcTime.cs  asn1-ffi-cs-tests.csproj
asn1-ffi/src/: lib.rs
asn1-jni/: Cargo.toml
asn1-jni/src/: lib.rs
asn1/api/: asn1.api
binding-layers/asn1-ffi/: Cargo.toml
binding-layers/asn1-jni/: Cargo.toml
binding-layers/crypto-ffi/: Cargo.toml
build-common/: build.gradle.kts
config/detekt/: detekt.yml
config/dokka/: dokkaStyle.css
core-modules-kotlin/: .gitignore  README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
core-modules-kotlin/asn1/: README.md  build.gradle.kts  consumer-rules.pro
core-modules-swift/: README.md
core-modules/crypto/: AGENTS_REVIEW_TEMPLATE.md  Cargo.toml  uniffi.toml
core-modules/crypto-openssl-sys/: .gitignore  Cargo.toml  openssl.bash
core-modules/crypto-openssl-sys/builder/: main.rs
core-modules/crypto-openssl-sys/include/: rust_wrapper.h
core-modules/crypto-openssl-sys/src/: bindings.rs  lib.rs  ossl.rs  ossl.rs.license
core-modules/crypto-openssl-sys/wrapper/: rust_wrapper.c  rust_wrapper.h
core-modules/crypto/src/: cvc.rs  digest.rs  error.rs  ffi.rs  kem.rs  key.rs  lib.rs  mac.rs
core-modules/crypto/src/bindings/: api.rs  ec.rs  hash.rs  mac.rs  mlkem.rs  mod.rs
core-modules/crypto/src/cipher/: aes.rs  mod.rs
core-modules/crypto/src/cypher/: aes.rs  cypher.rs  mod.rs
core-modules/crypto/src/ec/: ec_key.rs  ec_point.rs  ecdsa.rs  mod.rs
core-modules/crypto/src/exchange/: ecdh.rs  elc.rs  mod.rs
core-modules/crypto/src/ffi/: aes.rs  mod.rs
core-modules/crypto/src/kem/: kem.rs  mod.rs
core-modules/crypto/src/key/: ec_key.rs  ec_point.rs  key.rs  mod.rs
core-modules/crypto/src/ossl/: api.rs  bio.rs  cipher.rs  constant_time.rs  cvc.rs  digest.rs  ec.rs  hash.rs  key.rs  mac.rs  mlkem.rs  mod.rs  signature.rs
core-modules/crypto/src/utils/: byte_unit.rs  c_mac.rs  constant_time.rs  hash.rs  mod.rs  pem.rs  test_utils.rs
core-modules/healthcard/: AGENTS_REVIEW_TEMPLATE.md  Cargo.toml  uniffi.toml
core-modules/healthcard/src/: lib.rs  test_utils.rs
core-modules/healthcard/src/card/: card_key.rs  card_key_reference.rs  encrypted_pin_format2.rs  health_card_version2.rs  list_public_key.rs  mod.rs  pace_key.rs  password_reference.rs  pso_algorithm.rs
core-modules/healthcard/src/command/: apdu.rs  change_reference_data_command.rs  error.rs  external_authenticate_command.rs  general_authenticate_command.rs  get_pin_status_command.rs  get_random_command.rs  health_card_command.rs  health_card_status.rs  internal_authenticate_command.rs  list_public_key_command.rs  manage_security_environment_command.rs  mod.rs  pso_compute_digital_signature_command.rs  read_command.rs  reset_retry_counter_command.rs  reset_retry_counter_with_new_secret_command.rs  select_command.rs  verify_pin_command.rs
core-modules/healthcard/src/exchange/: apdu_tools.rs  certificate.rs  elc.rs  error.rs  ids.rs  mod.rs  pace_info.rs  pin.rs  random.rs  read_vsd.rs  secure_channel.rs  sign_challenge.rs  test_utils.rs  trusted_channel.rs
core-modules/healthcard/src/ffi/: README.md  channel.rs  command.rs  exchange.rs  maybe_zeroing_vec.rs  maybe_zeroizing_vec.rs  mod.rs  parsing.rs  secure_channel.rs  session.rs  trusted_channel.rs
core-modules/healthcard/src/identifier/: application_identifier.rs  file_identifier.rs  short_file_identifier.rs
core-modules/healthcard/tests/: exchange_replay.rs
crypto/: README.md  build.gradle.kts  karakum.config.json
crypto-ffi-cs-tests/: CryptoTest.cs
crypto-jvm-lib/: README.md  build.gradle.kts
crypto-jvm-swig/: README.md  build.gradle.kts  crypto.i
crypto-openssl-core/: Cargo.toml
crypto-openssl-ffi/: Cargo.toml
crypto-openssl-ffi-cs-tests/: CryptoOpenSsl.cs  CryptoOpenSslTest.cs  crypto-openssl-ffi-cs-tests.csproj
crypto-web-lib/: build.gradle.kts
docs/: README.md
gradle/: libs.versions.toml
healthcard/: build.gradle.kts
healthcard-reader/: build.gradle.kts
just/: default.just  kotlin.just  paths.just  rust.just  swift.just  uniffi.just
kmp-module/: build.gradle.kts
libs/openssl/_ems_wrapper/: CMakeLists.txt  wrapper.cpp
libs/openssl/_ems_wrapper/.config/: clion-cmake.sh
libs/openssl/ems_wrapper/: .clang-tidy  CMakeLists.txt  CMakePresets.json
libs/openssl/ems_wrapper/config/: clion-cmake.sh
libs/openssl/ems_wrapper/src/: capi.hpp  cipher.cpp  cipher.hpp  ec.cpp  ec.hpp  errors.hpp  hash.cpp  hash.hpp  mac.cpp  mac.hpp  mlkem.cpp  mlkem.hpp  types.hpp  wrapper.cpp
libs/openssl/wrapper/: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
libs/openssl/wrapper/cmake/: openssl.cmake
libs/openssl/wrapper/config/: clion-cmake.sh
libs/openssl/wrapper/patches/: openssl.patch
libs/openssl/wrapper/src/: capi.hpp  cipher.cpp  cipher.hpp  core.cpp  core.hpp  ec.cpp  ems_wrapper.cpp  errors.hpp  hash.hpp  mac.hpp  mlkem.cpp  mlkem.hpp  types.hpp
libs/openssl/wrapper/test/: CMakeLists.txt
libs/openssl/wrapper/test/src/: test.cpp
smartcard/: README.md  build.gradle.kts
smartcard-reader-nodejs/: build.gradle.kts
tools/: quality-report-ignore.txt  quality-report.py  reuse-annotate-changed.sh  run_apdu.sh
tools/uniffi-cli/: Cargo.toml
tools/uniffi-cli/src/: main.rs
(+1358 files in other folders)
