[workspace]
members = [
    "core-modules/asn1",
    "core-modules/crypto",
    "core-modules/crypto-openssl-sys",
    "core-modules/health-card",
    "binding-layers/asn1-jni",
    "binding-layers/asn1-ffi",
]
resolver = "2"
[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
