# SPDX-FileCopyrightText: Copyright 2025 - 2026 gematik GmbH
#
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# *******
#
# For additional notes and disclaimer from gematik and in case of changes by gematik,
# find details in the "Readme" file.

[package]
name = "crypto"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
name = "openhealth_crypto"

[features]
default = ["uniffi"]
ci = ["uniffi"]
uniffi = ["dep:uniffi", "openhealth_asn1/uniffi"]

[dependencies]
openhealth_asn1 = { package = "asn1", path = "../asn1" }
crypto-openssl-sys = { path = "../crypto-openssl-sys" }
regex = "1.12.3"
base64 = "0.22.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
num-bigint = "0.4"
num-traits = "0.2.19"
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }
uniffi = { version = "0.31.1", optional = true }
thiserror = "2.0.18"
rand = "0.10.1"
hex = "0.4.3"
