# SPDX-FileCopyrightText: Copyright 2025 - 2026 gematik GmbH
#
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# *******
#
# For additional notes and disclaimer from gematik and in case of changes by gematik,
# find details in the "Readme" file.

[package]
name = "healthcard"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
name = "healthcard"

[features]
default = ["uniffi"]
ci = ["uniffi", "apdu-tools"]
apdu-tools = ["dep:clap", "dep:serde", "dep:serde_json"]
pcsc = ["dep:pcsc"]

[dependencies]
lazy_static = "1.5.0"
thiserror = "2.0.16"
hex = "0.4.3"
asn1 = { path = "../asn1" }
crypto = { path = "../crypto" }
once_cell = "1.21.3"
num-bigint = "0.4"
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }
uniffi = { version = "0.30.0", optional = true }
clap = { version = "4.5.40", optional = true, features = ["derive"] }
serde = { version = "1.0.219", optional = true, features = ["derive"] }
serde_json = { version = "1.0.117", optional = true }
pcsc = { version = "2.8.2", optional = true }
